[gd_scene load_steps=13 format=2]

[ext_resource path="res://Niveles/nivel2.gd" type="Script" id=1]
[ext_resource path="res://Baba.tscn" type="PackedScene" id=2]
[ext_resource path="res://Objetos/Fantasmin.tscn" type="PackedScene" id=3]
[ext_resource path="res://Tiles Map/nivel2.tres" type="TileSet" id=4]
[ext_resource path="res://Jugador/caballero.tscn" type="PackedScene" id=5]
[ext_resource path="res://Sprites/backg2.png" type="Texture" id=6]
[ext_resource path="res://Objetos/ogro.tscn" type="PackedScene" id=7]
[ext_resource path="res://Sounds/segundonivel/segundoinicio.wav" type="AudioStream" id=8]
[ext_resource path="res://Sounds/segundonivel/segundoloop.wav" type="AudioStream" id=9]
[ext_resource path="res://Objetos/municion.tscn" type="PackedScene" id=10]
[ext_resource path="res://Objetos/Comida.tscn" type="PackedScene" id=11]
[ext_resource path="res://Objetos/Puerta.tscn" type="PackedScene" id=12]

[node name="SegundoNivel" type="Node2D"]
script = ExtResource( 1 )

[node name="Baba" parent="." instance=ExtResource( 2 )]
position = Vector2( 160.274, 397.147 )

[node name="Baba2" parent="." instance=ExtResource( 2 )]
position = Vector2( 1021.5, 625.944 )

[node name="Baba3" parent="." instance=ExtResource( 2 )]
position = Vector2( 101.995, 610.835 )

[node name="Fantasmin" parent="." instance=ExtResource( 3 )]
position = Vector2( 1037.86, 432.652 )

[node name="Fantasmin2" parent="." instance=ExtResource( 3 )]
position = Vector2( 1096.9, 402.791 )

[node name="Fantasmin3" parent="." instance=ExtResource( 3 )]
position = Vector2( 1164.75, 391.665 )

[node name="Fantasmin4" parent="." instance=ExtResource( 3 )]
position = Vector2( 1228.54, 375.438 )

[node name="Fantasmin5" parent="." instance=ExtResource( 3 )]
position = Vector2( 1286.52, 374.647 )

[node name="Fantasmin6" parent="." instance=ExtResource( 3 )]
position = Vector2( 1176.69, 529.15 )

[node name="Fantasmin7" parent="." instance=ExtResource( 3 )]
position = Vector2( 1024.7, 532.95 )

[node name="Fantasmin8" parent="." instance=ExtResource( 3 )]
position = Vector2( 565.197, 595.619 )
input_pickable = true

[node name="Fantasmin9" parent="." instance=ExtResource( 3 )]
position = Vector2( 177.084, 485.611 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 4 )
cell_size = Vector2( 16, 16 )
collision_layer = 3
collision_mask = 3
format = 1
tile_data = PoolIntArray( 196608, 36, 0, 262144, 36, 0, 327680, 36, 0, 393216, 36, 0, 458752, 36, 0, 524288, 36, 0, 589824, 36, 0, 655360, 36, 0, 655444, 36, 0, 720896, 36, 0, 720980, 36, 0, 786432, 36, 0, 786516, 36, 0, 851968, 36, 0, 852052, 36, 0, 917504, 36, 0, 917588, 36, 0, 983040, 36, 0, 983124, 36, 0, 1048576, 36, 0, 1048660, 36, 0, 1114112, 36, 0, 1114196, 36, 0, 1179648, 36, 0, 1179732, 36, 0, 1245184, 36, 0, 1245268, 36, 0, 1310720, 36, 0, 1310804, 36, 0, 1376256, 36, 0, 1376340, 36, 0, 1441792, 36, 0, 1441876, 36, 0, 1507328, 36, 0, 1507412, 36, 0, 1572864, 36, 0, 1572945, 35, 0, 1572946, 35, 0, 1572947, 35, 0, 1572948, 36, 0, 1638400, 36, 0, 1638478, 35, 0, 1638479, 35, 0, 1638481, 41, 0, 1638482, 42, 0, 1638483, 40, 0, 1638484, 36, 0, 1703936, 36, 0, 1704010, 35, 0, 1704011, 35, 0, 1704014, 41, 0, 1704015, 40, 0, 1704020, 36, 0, 1769472, 36, 0, 1769479, 7, 0, 1769480, 7, 0, 1769481, 7, 0, 1769482, 7, 0, 1769483, 7, 0, 1769484, 7, 0, 1769485, 7, 0, 1769486, 7, 0, 1769542, 35, 0, 1769543, 35, 0, 1769546, 41, 0, 1769547, 40, 0, 1769556, 36, 0, 1835008, 36, 0, 1835015, 8, 0, 1835016, 8, 0, 1835017, 8, 0, 1835018, 8, 0, 1835019, 8, 0, 1835020, 8, 0, 1835021, 8, 0, 1835022, 8, 0, 1835025, 7, 0, 1835026, 7, 0, 1835027, 7, 0, 1835028, 7, 0, 1835029, 7, 0, 1835030, 7, 0, 1835031, 7, 0, 1835032, 7, 0, 1835033, 7, 0, 1835074, 35, 0, 1835075, 35, 0, 1835078, 41, 0, 1835079, 40, 0, 1835092, 36, 0, 1900544, 36, 0, 1900551, 8, 0, 1900552, 8, 0, 1900553, 8, 0, 1900554, 8, 0, 1900555, 8, 0, 1900556, 8, 0, 1900557, 8, 0, 1900558, 8, 0, 1900561, 8, 0, 1900562, 8, 0, 1900563, 8, 0, 1900564, 8, 0, 1900565, 8, 0, 1900566, 8, 0, 1900567, 8, 0, 1900568, 8, 0, 1900569, 8, 0, 1900572, 36, 0, 1900573, 36, 0, 1900574, 36, 0, 1900575, 36, 0, 1900576, 36, 0, 1900606, 35, 0, 1900607, 35, 0, 1900610, 41, 0, 1900611, 40, 0, 1900628, 36, 0, 1966080, 36, 0, 1966108, 52, 0, 1966109, 52, 0, 1966110, 52, 0, 1966111, 52, 0, 1966112, 52, 0, 1966115, 3, 0, 1966116, 3, 0, 1966117, 3, 0, 1966118, 3, 0, 1966119, 3, 0, 1966120, 3, 0, 1966142, 41, 0, 1966143, 40, 0, 1966164, 36, 0, 2031616, 36, 0, 2031651, 8, 0, 2031652, 8, 0, 2031653, 8, 0, 2031654, 8, 0, 2031655, 8, 0, 2031656, 8, 0, 2031700, 36, 0, 2097152, 36, 0, 2097236, 36, 0, 2162688, 36, 0, 2162693, 4, 0, 2162694, 4, 0, 2162695, 4, 0, 2162731, 7, 0, 2162732, 7, 0, 2162733, 7, 0, 2162734, 7, 0, 2162735, 7, 0, 2162737, 41, 0, 2162738, 42, 0, 2162739, 44, 0, 2162742, 35, 0, 2162743, 35, 0, 2162744, 34, 0, 2162745, 34, 0, 2162746, 34, 0, 2162747, 34, 0, 2162748, 35, 0, 2162749, 35, 0, 2162753, 4, 0, 2162754, 4, 0, 2162755, 4, 0, 2162756, 4, 0, 2162757, 4, 0, 2162758, 4, 0, 2162759, 4, 0, 2162763, 4, 0, 2162764, 4, 0, 2162765, 4, 0, 2162766, 4, 0, 2162767, 4, 0, 2162768, 4, 0, 2162772, 36, 0, 2228224, 36, 0, 2228229, 8, 0, 2228230, 8, 0, 2228231, 8, 0, 2228239, 33, 0, 2228240, 33, 0, 2228241, 33, 0, 2228242, 33, 0, 2228243, 33, 0, 2228244, 33, 0, 2228267, 8, 0, 2228268, 8, 0, 2228269, 8, 0, 2228270, 8, 0, 2228271, 8, 0, 2228273, 41, 0, 2228274, 43, 0, 2228275, 44, 0, 2228278, 6, 0, 2228279, 6, 0, 2228280, 6, 0, 2228281, 6, 0, 2228282, 6, 0, 2228283, 6, 0, 2228284, 6, 0, 2228285, 6, 0, 2228289, 6, 0, 2228290, 6, 0, 2228291, 6, 0, 2228292, 6, 0, 2228293, 6, 0, 2228294, 6, 0, 2228295, 6, 0, 2228299, 6, 0, 2228300, 6, 0, 2228301, 6, 0, 2228302, 6, 0, 2228303, 6, 0, 2228304, 6, 0, 2228308, 36, 0, 2293760, 36, 0, 2293769, 53, 0, 2293772, 53, 0, 2293775, 6, 0, 2293776, 6, 0, 2293777, 6, 0, 2293778, 6, 0, 2293779, 6, 0, 2293780, 6, 0, 2293810, 43, 0, 2293814, 6, 0, 2293815, 6, 0, 2293816, 6, 0, 2293817, 6, 0, 2293818, 6, 0, 2293819, 6, 0, 2293820, 6, 0, 2293821, 6, 0, 2293825, 6, 0, 2293826, 6, 0, 2293827, 6, 0, 2293828, 6, 0, 2293829, 6, 0, 2293830, 6, 0, 2293831, 6, 0, 2293835, 6, 0, 2293836, 6, 0, 2293837, 6, 0, 2293838, 6, 0, 2293839, 6, 0, 2293840, 6, 0, 2293844, 36, 0, 2359296, 36, 0, 2359297, 7, 0, 2359298, 7, 0, 2359305, 53, 0, 2359308, 53, 0, 2359320, 7, 0, 2359321, 7, 0, 2359322, 7, 0, 2359323, 7, 0, 2359324, 7, 0, 2359325, 7, 0, 2359332, 4, 0, 2359333, 4, 0, 2359334, 4, 0, 2359335, 4, 0, 2359336, 4, 0, 2359337, 4, 0, 2359380, 36, 0, 2424832, 36, 0, 2424833, 8, 0, 2424834, 8, 0, 2424841, 53, 0, 2424844, 53, 0, 2424856, 8, 0, 2424857, 8, 0, 2424858, 8, 0, 2424859, 8, 0, 2424860, 8, 0, 2424861, 8, 0, 2424868, 6, 0, 2424869, 6, 0, 2424870, 6, 0, 2424871, 6, 0, 2424872, 6, 0, 2424873, 6, 0, 2424916, 36, 0, 2490368, 36, 0, 2490416, 7, 0, 2490417, 7, 0, 2490418, 7, 0, 2490419, 7, 0, 2490420, 7, 0, 2490452, 36, 0, 2555904, 36, 0, 2555936, 38, 0, 2555937, 38, 0, 2555938, 38, 0, 2555952, 8, 0, 2555953, 8, 0, 2555954, 8, 0, 2555955, 8, 0, 2555956, 8, 0, 2555988, 36, 0, 2621440, 36, 0, 2621441, 1, 0, 2621442, 1, 0, 2621443, 1, 0, 2621444, 1, 0, 2621445, 1, 0, 2621446, 1, 0, 2621447, 1, 0, 2621472, 6, 0, 2621473, 6, 0, 2621474, 6, 0, 2621482, 7, 0, 2621483, 7, 0, 2621484, 7, 0, 2621501, 7, 0, 2621502, 7, 0, 2621503, 7, 0, 2621504, 7, 0, 2621505, 7, 0, 2621506, 7, 0, 2621524, 36, 0, 2686976, 36, 0, 2686977, 8, 0, 2686978, 8, 0, 2686979, 8, 0, 2686980, 8, 0, 2686981, 8, 0, 2686982, 8, 0, 2686983, 8, 0, 2686987, 17, 0, 2686988, 17, 0, 2686989, 0, 0, 2687000, 4, 0, 2687001, 4, 0, 2687002, 4, 0, 2687003, 4, 0, 2687004, 4, 0, 2687005, 4, 0, 2687006, 4, 0, 2687007, 4, 0, 2687018, 8, 0, 2687019, 8, 0, 2687020, 8, 0, 2687037, 8, 0, 2687038, 8, 0, 2687039, 8, 0, 2687040, 8, 0, 2687041, 8, 0, 2687042, 8, 0, 2687060, 36, 0, 2752512, 36, 0, 2752522, 1, 0, 2752523, 7, 0, 2752524, 7, 0, 2752525, 7, 0, 2752526, 4, 0, 2752536, 51, 0, 2752537, 51, 0, 2752538, 51, 0, 2752539, 51, 0, 2752540, 51, 0, 2752541, 51, 0, 2752542, 51, 0, 2752543, 51, 0, 2752573, 8, 0, 2752574, 8, 0, 2752575, 8, 0, 2752576, 8, 0, 2752577, 8, 0, 2752578, 8, 0, 2752596, 36, 0, 2818048, 36, 0, 2818094, 7, 0, 2818095, 7, 0, 2818096, 7, 0, 2818132, 36, 0, 2883584, 36, 0, 2883630, 8, 0, 2883631, 8, 0, 2883632, 8, 0, 2883652, 7, 0, 2883653, 7, 0, 2883654, 7, 0, 2883655, 7, 0, 2883656, 7, 0, 2883657, 7, 0, 2883658, 7, 0, 2883659, 7, 0, 2883660, 7, 0, 2883661, 7, 0, 2883662, 7, 0, 2883663, 7, 0, 2883664, 7, 0, 2883665, 7, 0, 2883666, 7, 0, 2883668, 36, 0, 2949120, 36, 0, 2949121, 3, 0, 2949122, 0, 0, 2949123, 1, 0, 2949124, 1, 0, 2949125, 1, 0, 2949126, 1, 0, 2949127, 1, 0, 2949128, 1, 0, 2949129, 37, 0, 2949130, 37, 0, 2949131, 37, 0, 2949132, 37, 0, 2949134, 41, 0, 2949135, 42, 0, 2949136, 4, 0, 2949137, 4, 0, 2949138, 4, 0, 2949139, 4, 0, 2949140, 4, 0, 2949141, 4, 0, 2949142, 4, 0, 2949143, 4, 0, 2949166, 8, 0, 2949167, 8, 0, 2949168, 8, 0, 2949170, 7, 0, 2949171, 7, 0, 2949172, 7, 0, 2949173, 7, 0, 2949174, 7, 0, 2949175, 7, 0, 2949188, 7, 0, 2949189, 7, 0, 2949190, 7, 0, 2949191, 7, 0, 2949192, 7, 0, 2949193, 7, 0, 2949194, 7, 0, 2949195, 7, 0, 2949196, 7, 0, 2949197, 7, 0, 2949198, 7, 0, 2949199, 7, 0, 2949200, 7, 0, 2949201, 7, 0, 2949202, 7, 0, 2949204, 36, 0, 3014656, 6, 0, 3014657, 6, 0, 3014658, 6, 0, 3014659, 6, 0, 3014660, 6, 0, 3014661, 6, 0, 3014662, 6, 0, 3014663, 6, 0, 3014664, 6, 0, 3014665, 6, 0, 3014666, 6, 0, 3014667, 8, 0, 3014668, 8, 0, 3014671, 43, 0, 3014672, 6, 0, 3014673, 6, 0, 3014674, 6, 0, 3014675, 6, 0, 3014676, 6, 0, 3014677, 6, 0, 3014678, 6, 0, 3014679, 6, 0, 3014702, 8, 0, 3014703, 8, 0, 3014704, 8, 0, 3014706, 8, 0, 3014707, 8, 0, 3014708, 8, 0, 3014709, 8, 0, 3014710, 8, 0, 3014711, 8, 0, 3014724, 7, 0, 3014725, 8, 0, 3014726, 8, 0, 3014727, 8, 0, 3014728, 8, 0, 3014729, 8, 0, 3014730, 8, 0, 3014731, 8, 0, 3014732, 8, 0, 3014733, 8, 0, 3014734, 8, 0, 3014735, 8, 0, 3014736, 8, 0, 3014737, 8, 0, 3014738, 7, 0, 3014740, 36, 0, 3080192, 6, 0, 3080193, 6, 0, 3080194, 6, 0, 3080195, 6, 0, 3080196, 6, 0, 3080197, 6, 0, 3080198, 6, 0, 3080199, 6, 0, 3080200, 6, 0, 3080201, 6, 0, 3080202, 6, 0, 3080203, 8, 0, 3080204, 8, 0, 3080207, 43, 0, 3080208, 6, 0, 3080209, 6, 0, 3080210, 6, 0, 3080211, 6, 0, 3080212, 6, 0, 3080213, 6, 0, 3080214, 6, 0, 3080215, 6, 0, 3080238, 8, 0, 3080239, 8, 0, 3080240, 8, 0, 3080242, 8, 0, 3080243, 8, 0, 3080244, 8, 0, 3080245, 8, 0, 3080246, 8, 0, 3080247, 8, 0, 3080260, 7, 0, 3080261, 8, 0, 3080262, 8, 0, 3080263, 8, 0, 3080264, 8, 0, 3080265, 8, 0, 3080266, 8, 0, 3080267, 8, 0, 3080268, 8, 0, 3080269, 8, 0, 3080270, 8, 0, 3080271, 8, 0, 3080272, 8, 0, 3080273, 8, 0, 3080274, 7, 0, 3080276, 36, 0 )

[node name="Caballero" parent="." instance=ExtResource( 5 )]
position = Vector2( 94.9717, 674.985 )

[node name="Camera2D" type="Camera2D" parent="Caballero"]
current = true
zoom = Vector2( 0.6, 0.6 )
limit_left = 0
limit_top = 0
limit_right = 1366
limit_bottom = 768

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
scroll_base_scale = Vector2( 0.5, 0.5 )

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 1200, 0 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2( -406.7, -2.27206 )
texture = ExtResource( 6 )
centered = false

[node name="KinematicBody2D" parent="." instance=ExtResource( 7 )]
position = Vector2( 323.881, 407.808 )

[node name="KinematicBody2D2" parent="." instance=ExtResource( 7 )]
position = Vector2( 292.592, 519.359 )

[node name="KinematicBody2D3" parent="." instance=ExtResource( 7 )]
position = Vector2( 420.467, 543.845 )

[node name="KinematicBody2D4" parent="." instance=ExtResource( 7 )]
position = Vector2( 302.115, 697.567 )

[node name="KinematicBody2D5" parent="." instance=ExtResource( 7 )]
position = Vector2( 629.964, 550.647 )

[node name="KinematicBody2D6" parent="." instance=ExtResource( 7 )]
position = Vector2( 917.001, 490.791 )

[node name="KinematicBody2D7" parent="." instance=ExtResource( 7 )]
position = Vector2( 1093.85, 498.953 )

[node name="KinematicBody2D8" parent="." instance=ExtResource( 7 )]
position = Vector2( 1224.44, 511.196 )

[node name="KinematicBody2D9" parent="." instance=ExtResource( 7 )]
position = Vector2( 1157.79, 683.963 )

[node name="KinematicBody2D10" parent="." instance=ExtResource( 7 )]
position = Vector2( 1232.61, 666.278 )

[node name="Audioini" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = -4.0

[node name="Audioloop" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
volume_db = -4.0

[node name="Municion" parent="." instance=ExtResource( 10 )]
position = Vector2( 34.6208, 565.383 )

[node name="Municion2" parent="." instance=ExtResource( 10 )]
position = Vector2( 98.6854, 516.885 )

[node name="Municion3" parent="." instance=ExtResource( 10 )]
position = Vector2( 486.665, 443.839 )

[node name="Municion4" parent="." instance=ExtResource( 10 )]
position = Vector2( 1054.86, 622.861 )

[node name="Comida" parent="." instance=ExtResource( 11 )]
position = Vector2( 342.44, 680.779 )

[node name="Comida2" parent="." instance=ExtResource( 11 )]
position = Vector2( 1134.6, 678.62 )

[node name="Comida3" parent="." instance=ExtResource( 11 )]
position = Vector2( 1225.25, 663.777 )

[node name="Puerta" parent="." instance=ExtResource( 12 )]
position = Vector2( 1322.1, 365.181 )
[connection signal="senalmuerto" from="Caballero" to="." method="_on_Caballero_senalmuerto"]
[connection signal="senalmuerto" from="Caballero" to="Puerta" method="_on_Caballero_senalmuerto"]
[connection signal="finished" from="Audioini" to="." method="_on_Audioini_finished"]
[connection signal="finished" from="Audioloop" to="." method="_on_Audioloop_finished"]
